<resources>
    <string name="app_name">Betadrive</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to login bundle -->
    <string name="user_id">UserId</string>
    <string name="user_email">UserEmail</string>
    <string name="full_name">FullName</string>
    <string name="user_photo">UserPhoto</string>
    <string name="user_token">UserToken</string>
    <string name="auth_web_clientid">756014264865-kqppcb66t2uh5ud69eo6pp7ev42r7edn.apps.googleusercontent.com</string>

    <string name="title_activity_maps">Map</string>


    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_reset">Reset</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="recommend">Recommend</string>
    <string name="payment">Payment</string>
    <string name="privacy">Privacy Settings</string>
    <string name="history">My history</string>
    <string name="signout">Sign out</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_custom_login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Full Name</string>

    <string name="auth_failed">Authentication Failed</string>
    <string name="pass_length">Password minimum 6 char</string>
    <string name="pass_resend">Reset Password</string>

    <!-- Maps Activity -->
    <string name="pickup">Choose pickup location</string>
    <string name="current_pos">Current marker position address</string>
    <string name="default_dest">Sample, address, lorem ipsum Nr17</string>
    <string name="placeholder_dest">Enter Destination...</string>


</resources>
