<?xml version="1.0" encoding="utf-8"?>

<!-- Use DrawerLayout as root container for activity -->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5"
            >



            <com.example.betadrive.CustomViews.PinPoint
                android:id="@+id/map_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                >

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:map="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MapsActivity"
                    map:uiZoomControls = "false"
                    map:uiCompass = "false"

                    />

            </com.example.betadrive.CustomViews.PinPoint>



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="#EDEDF2"
                android:orientation="vertical"
                android:elevation="8dp"
                >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="@color/white"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:tint="@color/lightBlue"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pickup"
                    android:textColor="@color/login"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="-16dp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>




                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_pos"
                    android:textSize="12sp"
                    android:paddingLeft="16dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textColor="#666"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:cardCornerRadius="20dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/white"
                        android:elevation="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        >

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_directions_black_24dp"
                            android:tint="@color/lightBlue"/>


                    </androidx.cardview.widget.CardView>



                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/pickup_place"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/default_dest"
                        android:textColor="@color/login"
                        android:gravity="center|left"
                        android:textSize="16sp"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="18dp"
                    android:paddingBottom="8dp"
                    >

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:onClick="checkOut"

                        android:text="@string/placeholder_dest"
                        android:textColor="@color/login"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textSize="16sp"

                        android:backgroundTint="@color/white"
                        android:background="@drawable/roundedb"

                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:paddingLeft="32dp"
                        android:elevation="20dp"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>



            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>



                <androidx.cardview.widget.CardView
                    android:id="@+id/map_menu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="18dp"
                    android:backgroundTint="@color/white"
                    android:layout_gravity="right"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:outlineAmbientShadowColor="@color/colorPrimaryDark"
                    app:cardElevation="8dp"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"
                        android:padding="10dp"

                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_menu_black_24dp"
                        android:tint="#333"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_menu_black_24dp" />

                </androidx.cardview.widget.CardView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gps_fixed_black_24dp"
            android:tint="@color/lightBlue"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:elevation="8dp"
            app:layout_anchor="@id/map_wrapper"
            app:layout_anchorGravity="bottom|right|end"
            />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:tint="@color/white"
                android:layout_margin="16dp"
                android:backgroundTint="@color/accentGreen"
                app:borderWidth="0dp"
                app:fabSize="normal"
                app:elevation="8dp"
                app:layout_anchor="@id/map_wrapper"
                app:layout_anchorGravity="bottom|right|end"
                android:visibility="gone"
                />




        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </FrameLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"
        />


</androidx.drawerlayout.widget.DrawerLayout>
